# CodePoets-recruitment-task

./: stack_traces.py
benfords_law/: .flake8  .gitignore  README.md  docker-compose.yml  mypy.ini  production.yml  pyproject.toml
benfords_law/backend/: .gitignore  .pylintrc  Dockerfile  mypy.ini  pyproject.toml
benfords_law/backend/app/: helpers.py  main.py  models.py  types.py
benfords_law/backend/app/database/: __init__.py  mongo_model.py  project.py
benfords_law/backend/app/models/: __init__.py  data_item.py
benfords_law/backend/app/routes/: __init__.py  benford_test.py  project.py  utils.py
benfords_law/backend/data/: .~lock.uniform.xlsx#  numbers.csv  uniform.ods  uniform.xlsx
benfords_law/frontend/: Dockerfile  Dockerfile.dev  package.json  tsconfig.json
benfords_law/frontend/nginx/: nginx.conf  nginx.dev.conf
benfords_law/frontend/public/: index.html
benfords_law/frontend/src/: App.css  App.tsx  global.ts  theme.ts  types.ts
benfords_law/frontend/src/components/About/: About.tsx
benfords_law/frontend/src/components/BenfordForm/: BenfordForm.tsx  elements.ts  index.ts
benfords_law/frontend/src/components/BenfordGraph/: BenfordGraph.tsx  elements.ts  index.ts  types.ts
benfords_law/frontend/src/components/CloseButton/: CloseButton.tsx
benfords_law/frontend/src/components/Loading/: Loading.tsx
benfords_law/frontend/src/components/Main/: Main.tsx  elements.ts
benfords_law/frontend/src/hooks/: index.ts  useBenford.ts
stack_traces/: PythonStackTraces.txt  main.tex
widgets/: main.tex
(+4 files in other folders)
