[tool.poetry]
name = "benfords_law"
version = "0.1.0"
description = ""
authors = ["pawelrubin <pawelrubin19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
python-multipart = "^0.0.5"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
mypy = "^0.782"
rope = "^0.17.0"
flake8 = "^3.8.3"
bandit = "^1.6.2"

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
