[tool.poetry]
name = "benfords_law"
version = "0.1.0"
description = ""
authors = ["pawelrubin <pawelrubin19@gmail.com>"]
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
python-multipart = "^0.0.5"
pandas = "^1.1.2"
motor = "^2.2.0"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
mypy = "^0.782"
rope = "^0.17.0"
flake8 = "^3.8.3"
bandit = "^1.6.2"

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
